--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "dilab/resumable.php",
+  "name": "d-ivaschenko-parc/resumable.php",
   "description": "PHP package for Resumable.js",
   "authors": [
     {
